first version of bibliography sort and n&e

--- a/main.html
+++ b/main.html
@@ -12,8 +12,10 @@
 	<div class="container">
     <div class="navbar navbar-default" role="navigation">
     	<ul class="nav navbar-nav navbar-right">
-      	{{>loginButtons }}
+      	<!-- {{>loginButtons }} -->
+        {{> atNavButton}}
     	</ul>
-		</div>
+		</div> <!-- end navbar -->
+    <!-- {{> atForm}} -->
   </div>
 </template>
