--- a/main.html
+++ b/main.html
@@ -6,4 +6,5 @@
 <template name="applicationLayout">
 	{{> yield region = "header"}}
 	{{> yield "main"}}
+  {{> yield region = "footer"}}
 </template>
