about us + bertAlert + members login

--- a/main.html
+++ b/main.html
@@ -6,5 +6,6 @@
 <template name="applicationLayout">
 	{{> yield region = "header"}}
 	{{> yield "main"}}
+  {{> sAlert}}
   {{> yield region = "footer"}}
 </template>
