--- a/main.html
+++ b/main.html
@@ -3,4 +3,5 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Open Strategy Network</title>
+  <link rel="stylesheet" href="client/templates/styles/academicons/css/academicons.css"/>
 </head>
